force-app/main/default/objects/CamapignMemberStatus__mdt/CamapignMemberStatus__mdt.object-meta.xml
<CustomObject>
    <label>CamapignMemberStatus</label>
    <pluralLabel>CamapignMemberStatus</pluralLabel>
</CustomObject>