force-app/main/default/objects/CamapignMemberStatus__mdt/fields/Campaign_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Record_Type_Name__c</fullName>
    <label>Campaign Record Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>