force-app/main/default/objects/CamapignMemberStatus__mdt/fields/HasResponded__c.field-meta.xml
<CustomField>
    <fullName>HasResponded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasResponded</label>
    <type>Checkbox</type>
</CustomField>