force-app/main/default/objects/CamapignMemberStatus__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Campaign_Record_Type_Name__c</columns>
    <columns>HasResponded__c</columns>
    <columns>Is_Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>